# knowledge-search

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
crates/knowledge-search/: Cargo.toml
crates/knowledge-search/src/: algos.rs  main.rs
crates/matrix-indexer/: Cargo.toml  config.example.kdl
crates/matrix-indexer/src/: config.rs  indradb_utils.rs  main.rs  matrix.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
