[package]
name = "knowledge-search"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
utils = { version = "0.0.0", path = "../utils" }