[package]
name = "matrix-indexer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
cfg-if = "1.0.0"
color-eyre = "0.6.2"
futures = "0.3.27"
kdl = "4.6.0"
lazy_static = "1.4.0"
matrix-sdk = { version = "0.6.2", features = ["experimental-timeline", "eyre", "rustls-tls", "sled"], default-features = false }
miette = { version = "5.6.0", features = ["fancy"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
utils = { version = "0.0.0", path = "../utils" }
uuid = { version = "1.3.0", features = [ "serde", "v4"] }
